live-coding updating

--- a/live_coding/eshtml/index.html
+++ b/live_coding/eshtml/index.html
@@ -3,14 +3,44 @@
       <!-- Head contiene informazioni e risorse aggiuntive che servono alla pagina -->
       <head>
           <title>Prima pagina HTML</title>
-          <link rel="stylesheet" href="main.css">
+          <link rel="stylesheet" href="12bool.css">
+          <link rel="stylesheet"  href="main.css">
       </head>
       <!-- Body contiene il corpo della pagine, tutto il contenuto va qui -->
       <body>
-        <!-- <div class="green">
-            <div class="blue"></div>
-            <div class="red"></div>
-      </div> -->
+
+        <!-- riga a 2 colonne -->
+        <div class="container">
+          <div class="col-6">
+
+          </div>
+          <div class="col-6">
+
+          </div>
+
+        </div>
+
+        <!-- riga a 3 colonne -->
+        <div class="container">
+          <div class="col-4">
+
+          </div>
+          <div class="col-4">
+
+          </div>
+          <div class="col-4">
+
+          </div>
+
+        </div>
+
+        <!-- riga con unico blocco a 3 a dx -->
+        <div class="container">
+          <div class="col-3 col-offset-9">
+
+          </div>
+
+        </div>
 
 
       </body>
